Fixed spelling errors

--- a/texDocs/cv.tex
+++ b/texDocs/cv.tex
@@ -125,9 +125,9 @@ Ann Arbor MI 48109-1107 \>
 
 \section*{Education}
 
-{\bf PhD in Statatistics} \hfill {\textit{2020--Present}}
+{\bf PhD in Statistics} \hfill {\textit{2020--Present}}
 
-Univeristy of Michigan, Ann Arbor, MI.
+University of Michigan, Ann Arbor, MI.
 
 Thesis Advisor: Edward Ionides
 
@@ -264,7 +264,7 @@ Graduated Summa cum laude as valedictorian of the College of Science, class of 2
 
   \item Weizhe Sun. Model Based Inference of Stochastic Volatility via Iterated Filtering. Honors thesis, 2024.
   \item Zuyuan Han. Signature Methods in Variance Swap Pricing. Honors thesis, 2023.
-  \item Bo Yang. Analysis of Panel Data via Mechianistic Models in a PanelPOMP Framework. Honors thesis, 2023.
+  \item Bo Yang. Analysis of Panel Data via Mechanistic Models in a PanelPOMP Framework. Honors thesis, 2023.
   \item Kevin Tan and Noah Treutle. On the Transmissibility of Cholera During the 2010--2019 Haiti Cholera Epidemic. Research project, 2022.
 
 \end{reflist}
