Fixed margins of CV

--- a/texDocs/cv.tex
+++ b/texDocs/cv.tex
@@ -1,6 +1,6 @@
-\documentclass[11pt] {article}
+\documentclass[11pt]{article}
 \usepackage[utf8]{inputenc}
-\usepackage{geometry}
+\usepackage[left=2cm,right=2cm,bottom=3cm]{geometry}
 \usepackage{fancyhdr}
 \usepackage{sectsty}
 \usepackage{hyperref}
