Fixed ArXiv prepint issue

--- a/texDocs/myWorks.bib
+++ b/texDocs/myWorks.bib
@@ -26,8 +26,8 @@
 
  @article{wheelerARMA,
     author  = {Wheeler, Jesse and Ionides, Edward L.},
-    year    = "2023",
-    journal = "ArXiv preprint",
+    year    = {2023},
+    journal = {ArXiv preprint},
     title = {Likelihood Based Inference of {ARMA} Models},
     doi = {arXiv.2310.01198},
     priority = {1}
